<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="220dp"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/text_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel_text"
        android:textStyle="bold"
        android:fontFamily="@font/quicksand"
        android:textSize="13sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/clear_all_confirmation"
        android:fontFamily="@font/quicksand"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:letterSpacing="0.10"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25dp"
        android:minHeight="0dp"
        android:text="@string/okay_text"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:backgroundTint="@color/brown"/>

</RelativeLayout>