<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/dolands"
        android:textColor="@color/black"
        android:gravity="bottom|center"
        android:fontFamily="@font/rakkas"
        android:textSize="45dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="6dp"
            android:background="@drawable/round_search">
            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:textColorHint="@color/gray_dark"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand"
                android:textSize="16dp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="6dp"
            android:background="@drawable/round_search">
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/gray_dark"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand"
                android:textSize="16dp"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/login"
                android:textColor="@color/brown"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textSize="13dp"
                android:background="@drawable/round_button"/>
        </LinearLayout>
        <TextView
            android:id="@+id/text_click_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/click_to_signup"
            android:textColor="@color/gray_dark"
            android:fontFamily="@font/questrial"
            android:textSize="11dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="end|bottom">
        <Button
            android:id="@+id/button_skip_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brown"
            android:minHeight="0dp"
            android:text="@string/skip"
            android:fontFamily="@font/montserrat"
            android:letterSpacing="0.06"/>
    </LinearLayout>

</LinearLayout>