<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:padding="6dp"
        android:background="@drawable/round_search">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="13dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageUserReview"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/profilephoto"
                    android:contentDescription="@string/profile_picture" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/usernameReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/username"
                android:fontFamily="@font/questrial"
                android:textSize="12sp"
                android:letterSpacing="0.06"
                android:textColor="@color/black"/>
        </LinearLayout>

        <View
            android:layout_width="105dp"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:background="@color/yellow"/>

        <TextView
            android:id="@+id/text_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:paddingStart="8dp"
            android:background="@android:color/transparent"
            android:text="@string/isi_review"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand"
            android:textSize="11sp"
            android:letterSpacing="0.02"/>
    </LinearLayout>

</LinearLayout>