<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="8"
        android:layout_margin="15dp">

        <ImageButton
            android:id="@+id/imgbutton_exit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_exit"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:layout_gravity="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:paddingHorizontal="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/user_profilephoto"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    app:cardCornerRadius="70dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/profilephoto"/>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="15dp">

                    <TextView
                        android:id="@+id/text_user_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="23sp"
                        android:textColor="@color/brown"
                        android:fontFamily="@font/quicksand"
                        android:textStyle="bold"
                        android:letterSpacing="0.07"
                        android:layout_marginStart="5dp"/>

                    <TextView
                        android:id="@+id/text_user_fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fullname"
                        android:textSize="19sp"
                        android:textColor="@color/brown"
                        android:fontFamily="@font/quicksand"
                        android:letterSpacing="0.03"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>

            <TextView
                android:id="@+id/text_user_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textSize="14sp"
                android:textColor="@color/brown"
                android:fontFamily="@font/quicksand"
                android:letterSpacing="0.03"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/button_editprofile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/brown"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat"
                android:textSize="13sp"
                android:textStyle="bold"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_my_review"
                    android:textSize="21.5sp"
                    android:textColor="@color/brown"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="bold"
                    android:letterSpacing="0.07"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="37dp"
                        android:layout_height="37dp"
                        android:src="@drawable/ic_bookmark"
                        app:tint="@color/yellow"/>

                    <TextView
                        android:id="@+id/text_saved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/saved"
                        android:textSize="21.5sp"
                        android:textColor="@color/yellow"
                        android:fontFamily="@font/montserrat"
                        android:textStyle="bold"
                        android:letterSpacing="0.07"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:text="@string/no_review_yet"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:letterSpacing="0.05"
            android:textColor="@color/gray"
            android:fontFamily="@font/questrial"
            android:gravity="center"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        app:itemBackground="@color/white"
        app:itemTextColor="@drawable/nav_bottom_color"
        app:itemIconTint="@drawable/nav_bottom_color"
        app:menu="@menu/bottom_navigation"/>

</LinearLayout>